--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
                 <section class="menu-section">
                     <h2>Players</h2>
                     <div class="menu-grid">
-                        <button class="menu-btn" data-lang="species">Species</button>
+                        <button class="menu-btn" data-lang="races">Species</button>
                         <button class="menu-btn" data-lang="classes">Classes</button>
                         <button class="menu-btn" data-lang="feats">Feats</button>
                         <button class="menu-btn" data-lang="options-features">Options & Features</button>
                         <button class="menu-btn" data-lang="backgrounds">Backgrounds</button>
                         <button class="menu-btn" data-lang="items">Items</button>
-                        <button class="menu-btn" data-lang="spells">Spells</button>
+                        <button class="menu-btn" data-lang="spells-phb">Spells</button>
                     </div>
                 </section>
                 <section class="menu-section">
@@ -66,14 +66,14 @@
         </main>
     </section>
     
-    <section id="species-screen" class="screen">
+    <section id="content-screen" class="screen">
         <main class="species-screen-content">
             <button id="back-to-search-btn" class="back-btn">Back to Search</button>
-            <h1 id="species-title" class="section-title">Species</h1>
+            <h1 id="content-title" class="section-title">Content</h1>
             <div class="filter-container">
-                <input type="text" id="species-filter-input" placeholder="Filter species...">
+                <input type="text" id="content-filter-input" placeholder="Filter content...">
             </div>
-            <div id="species-list-container" class="list-container">
+            <div id="content-list-container" class="list-container">
                 </div>
         </main>
     </section>
