--- a/index.html
+++ b/index.html
@@ -34,28 +34,28 @@
                 <section class="menu-section">
                     <h2>Players</h2>
                     <div class="menu-grid">
-                        <button class="menu-btn" data-lang="races">Species</button>
-                        <button class="menu-btn" data-lang="classes">Classes</button>
-                        <button class="menu-btn" data-lang="feats">Feats</button>
-                        <button class="menu-btn" data-lang="options-features">Options & Features</button>
-                        <button class="menu-btn" data-lang="backgrounds">Backgrounds</button>
-                        <button class="menu-btn" data-lang="items">Items</button>
-                        <button class="menu-btn" data-lang="spells-phb">Spells</button>
+                        <button class="menu-btn" data-lang="races" data-display-name="Species">Species</button>
+                        <button class="menu-btn" data-lang="classes" data-display-name="Classes">Classes</button>
+                        <button class="menu-btn" data-lang="feats" data-display-name="Feats">Feats</button>
+                        <button class="menu-btn" data-lang="options-features" data-display-name="Options & Features">Options & Features</button>
+                        <button class="menu-btn" data-lang="backgrounds" data-display-name="Backgrounds">Backgrounds</button>
+                        <button class="menu-btn" data-lang="items" data-display-name="Items">Items</button>
+                        <button class="menu-btn" data-lang="spells-phb" data-display-name="Spells">Spells</button>
                     </div>
                 </section>
                 <section class="menu-section">
                     <h2>Rules</h2>
                     <div class="menu-grid">
-                        <button class="menu-btn" data-lang="adventures">Adventures</button>
-                        <button class="menu-btn" data-lang="books">Books</button>
-                        <button class="menu-btn" data-lang="rules-glossary">Rules Glossary</button>
-                        <button class="menu-btn" data-lang="conditions">Conditions</button>
+                        <button class="menu-btn" data-lang="adventures" data-display-name="Adventures">Adventures</button>
+                        <button class="menu-btn" data-lang="books" data-display-name="Books">Books</button>
+                        <button class="menu-btn" data-lang="rules-glossary" data-display-name="Rules Glossary">Rules Glossary</button>
+                        <button class="menu-btn" data-lang="conditions" data-display-name="Conditions">Conditions</button>
                     </div>
                 </section>
                 <section class="menu-section">
                     <h2>Dungeon Masters</h2>
                     <div class="menu-grid">
-                        <button class="menu-btn" data-lang="dm-options">DM Options</button>
+                        <button class="menu-btn" data-lang="dm-options" data-display-name="DM Options">DM Options</button>
                     </div>
                 </section>
             </div>
