--- a/index.html
+++ b/index.html
@@ -67,13 +67,22 @@
     </section>
     
     <section id="content-screen" class="screen">
-        <main class="species-screen-content">
+        <main class="content-screen-content">
             <button id="back-to-search-btn" class="back-btn">Back to Search</button>
             <h1 id="content-title" class="section-title">Content</h1>
             <div class="filter-container">
                 <input type="text" id="content-filter-input" placeholder="Filter content...">
             </div>
             <div id="content-list-container" class="list-container">
+                </div>
+        </main>
+    </section>
+
+    <section id="detail-screen" class="screen">
+        <main class="detail-screen-content">
+            <button id="back-to-content-btn" class="back-btn">Back</button>
+            <h1 id="detail-title" class="section-title">Detail</h1>
+            <div id="detail-container">
                 </div>
         </main>
     </section>
