--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
             <h1 id="content-title" class="section-title">Content</h1>
             <div class="filter-container">
                 <input type="text" id="content-filter-input" placeholder="Filter content...">
+                <button id="filter-phb24-btn">Filter PHB'24</button>
             </div>
             <div id="content-list-container" class="list-container">
                 </div>
